Fix spacing for Time

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -270,7 +270,7 @@ img {
 .form select,
 .form textarea {
   display: block;
-  width: 45%;
+  width: 18.5rem;
   padding: 0.2rem;
   font-size: 1.2rem;
   border: 1px solid #ccc;
@@ -1030,6 +1030,18 @@ button {
 /*     color: #000000; */
 /* } */
 
+.react-datepicker__time-container .react-datepicker__time .react-datepicker__time-box ul.react-datepicker__time-list li.react-datepicker__time-list-item {
+padding-left: 1px;
+padding-right: 1px;
+}
+
+.react-datepicker__time-container .react-datepicker__time .react-datepicker__time-box ul.react-datepicker__time-list {
+width: 55px;
+}
+
+.react-datepicker__time-container {
+width: 55px
+}
 /* Spinner */
 @keyframes ldio-xwrktmxvjdj {
 0% { opacity: 1 }
